--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,93 @@
   width: 100%;
   height: 100vh;
 }
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+
+.arButton {
+  padding: 16px 24px;
+  position: absolute;
+  z-index: 10000;
+  bottom: 1rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+  border: 1px solid transparent;
+  text-align: center;
+  font-weight: 600;
+  white-space: nowrap;
+  transition: color .25s, border-color .25s, background-color .25s;
+  border-radius: 6px;
+  background-color: #f6f6f7;
+  display: inline-flex;
+  font-size: 24px;
+
+  cursor: pointer;
+  
+  &:hover {
+    background-color: #e4e4e9;
+  }
+}
+
+.buttonsGrid {
+  display: grid;
+  grid-template-columns: 38px 38px 38px 38px 38px;
+  grid-template-rows: 38px 38px;
+  gap: 8px;
+}
+
+.controlsButton {
+  border: 1px solid transparent;
+  text-align: center;
+  font-weight: 600;
+  white-space: nowrap;
+  transition: color .25s, border-color .25s, background-color .25s;
+  border-radius: 6px;
+  background-color: #f6f6f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+
+  &:hover {
+    background-color: #e4e4e9;
+  }
+
+  cursor: pointer;
+}
+
+
+.x1 {
+  grid-row: 2;
+  grid-column: 2 / 3;
+}
+
+.x2 {
+  grid-row: 2;
+  grid-column: 4 / 5;
+}
+
+.y1 {
+  grid-row: 1;
+  grid-column: 1 / 2;
+}
+
+.y2 {
+  grid-row: 1;
+  grid-column: 5 / 5;
+}
+
+.z1 {
+  grid-row: 1;
+  grid-column: 3 / 4;
+}
+
+.z2 {
+  grid-row: 2;
+  grid-column: 3 / 4;
+}
